--- a/estilo.css
+++ b/estilo.css
@@ -1,1 +1,42 @@
-body } 
+body { 
+   background-color: rgb(180,180,180);
+   font-family: sans-serif;  
+}
+
+#cabecalho{
+    border: blue 1px solid;
+    border: 10px;
+    padding-left: 50px;
+    margin-bottom: 30px;
+    box-shadow: brown 2px 2px 5px;
+}
+
+#conteudo{
+    background-color: aqua;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 2%; 
+} 
+
+a { 
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: chartreuse;
+    text-decoration: unset;
+}
+
+#navbar{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+#imgGeral{
+    width: 100%;
+}
+
+#tituloDestaque{
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    text-shadow: gray 1px 1px 5px;
+}
